<resources>
    <string name="app_name">Happy Places Application</string>
    <string name="title_">Title</string>
    <string name="addHappyPlaceTitle">Add Happy Place</string>
    <string name="description">Description</string>
    <string name="location">Location (enter manually for now/ map feature soon)</string>
    <string name="addImage">Add Image</string>
    <string name="btn_text_save">SAVE</string>
    <string name="date">Date</string>
    <string name="note_text_no_happy_places_found_yet_kindly_add_one">Happy Places Not Found . Kindly Add one</string>
    <string name="happy_place_detail">Happy Place Detail</string>
    <string name="google_maps_api_key">AIzaSyAi6dQMG6026nV6xFu_LVpr4bQ_60z7nOI</string>
</resources>